# mlipaudit

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: benchmark.doctree  index.doctree  io.doctree  run_mode.doctree  scoring.doctree  ui.doctree
.doctrees/benchmarks/: index.doctree
.doctrees/installation/: index.doctree
.doctrees/scores/: index.doctree
.github/: benchmark_addition_pr_template.md  pull_request_template.md
.github/workflows/: deploy_docs.yaml  publish.yaml  sync-hf-space.yaml.yml  tests_and_linters.yaml  tests_and_linters_and_docs_build.yaml  tox_tests.yaml  validate_pr_title.yaml
api_reference/: benchmark.html  index.html  io.html  run_mode.html  scoring.html  ui.html
api_reference/biomolecules/: folding_stability.html  sampling.html
api_reference/general/: scaling.html  stability.html
api_reference/small_molecules/: bond_length_distribution.html  conformer_selection.html  dihedral_scan.html  noncovalent_interactions.html  nudged_elastic_band.html  radial_distribution.html  reactivity.html  reference_geometry_stability.html  ring_planarity.html  solvent_radial_distribution.html  tautomers.html
api_reference/utils/: inference_and_simulation.html  trajectory_helpers.html
app_data/dihedral_scan/: TorsionNet500_nocoord.json
app_data/water_radial_distribution/: tip4p_500ps.npz
benchmarks/: index.html
benchmarks/biomolecules/: index.html  sampling.html
benchmarks/general/: index.html  scaling.html  stability.html
benchmarks/molecular_liquids/: index.html  radial_distribution.html
benchmarks/small_molecules/: bond_length_distribution.html  conformer_selection.html  dihedral_scan.html  index.html  reactivity.html  (+5 more)
installation/: index.html
scores/: index.html
scripts/: fetch_atomic_species.py  fetch_element_types.py
src/: main.py
tests/: conftest.py  test_ase_calculator.py  test_io.py  test_run_mode.py  test_scoring.py  test_ui_pages.py
(+244 files in other folders)
