[project]
name = "mlipaudit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Walewski", email = "l.walewski@instadeep.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mlip>=0.1.2",
]

[project.scripts]
mlipaudit = "mlipaudit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
