[project]
name = "mlipaudit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Walewski", email = "l.walewski@instadeep.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mlip>=0.1.2",
    "scikit-learn>=1.7.0",
]

[project.scripts]
mlipaudit = "mlipaudit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.4.4",
    "pytest>=8.4.1",
]
scripts = [
    "requests>=2.32.4",
]
