[project]
name = "mlipaudit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "InstaDeep", email = "placeholder@instadeep.com" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.4",
    "mdtraj>=1.10.3",
    "jax-md",
    "mlip>=0.1.2",
    "jax-md",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "vl-convert-python>=1.8.0",
    "mdtraj>=1.10.3",
    "tmtools==0.2.0",
    "jax-md",
]

[project.scripts]
mlipaudit = "mlipaudit.main:main"
mlipauditapp = "mlipaudit.app:launch_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.4.4",
    "pytest>=8.4.1",
    "pre-commit>=4.1.0",
    "pytest-mock>=3.14.1",
    "sphinx>=8.1.3",
    "furo>=2025.7.19",
    "pytest-cov>=6.2.1",
    "sphinx-subfigure>=0.2.4",
]
scripts = [
    "requests>=2.32.4",
]
gpu = [
    "jax[cuda12]==0.4.33",
    "jaxlib==0.4.33"
]

[tool.coverage.run]
omit = [
    "main.py",
    "app.py"
]

[tool.uv.sources]
jax-md = { git = "https://github.com/jax-md/jax-md.git" }
